fix enable-token-toggle out of view in manage-account on smallscreen

--- a/frontends/web/src/routes/settings/manage-accounts.module.css
+++ b/frontends/web/src/routes/settings/manage-accounts.module.css
@@ -123,6 +123,7 @@
     flex-basis: 100%;
     flex-direction: column;
     flex-wrap: wrap;
+    max-width: 100%;
     padding: 0 0 0 4px;
 }
 
